--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/jpg" href="img/favicon.ico"/>
     <title>Transformers 2023</title>
 
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;500&display=swap" rel="stylesheet"> 
@@ -15,7 +15,7 @@
 <body>
     <main>
         <section class="transformers">
-            <img class="robo" src="img/Galvatron-removebg-preview.png" alt="Transformers" id="galvatron">
+            <img class="robo" src="./img/Galvatron-removebg-preview.png" alt="Transformers" id="galvatron">
             <figcaption class="titulo">Transformers <br>2023</figcaption>
         </section>
 
